--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@
     cursor: pointer;
 }
 .hero {
-    background: url(images/hero_background.svg);
+    background-color: #7a7a7a;
     margin-left: 134px;
 }
 .hero__header {
@@ -99,7 +99,9 @@
 .hero__buttons_container {
     display: flex;
     gap: 20px;
+    margin: 0 0 208px 0;
 }
+
 .hero_btn {
     width: 207px;
     height: 51px;
@@ -113,7 +115,7 @@
     font-style: italic;
     font-weight: 400;
     line-height: normal;
-    margin-bottom: 208px;
+    
 }
 .hero_btn:hover {
     background: #E3B873;
@@ -124,59 +126,141 @@
     display: flex;
     margin-left: 134px;
     gap: 50px;
+    background-color: #7a7a7a;
 }
 .completed_projects__description {
-    display: grid;
-    grid-template-columns: 161px auto;
-    grid-template-rows: 66px 128px 22px 42px 22px 112px;
-    grid-template-areas: 
-    "main_block__header"
-    "main_block__description"
-    "secondary_block__header secondary_block__header"
-    "secondary_block__description secondary_block__description"
-    "secondary_block__header secondary_block__header"
-    "secondary_block__description secondary_block__description";
-
+    display: flex;
+    flex-direction: column;
+    max-width: 442px;
 }
+
 .completed_projects__description__main_block {
+    
 }
 .main_block__header {
-    grid-area: main_block__header;
+    color: #E3B873;
+    font-family: Yeseva One;
+    font-size: 27px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 138.6%; /* 37.422px */
+    letter-spacing: -1.89px;
+    text-transform: uppercase;
+    margin: 176px 0 34px 0;
 }
 .main_block__description {
-    grid-area: main_block__description;
+    color: #FFF;
+    font-family: Nunito Sans;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 190.96%; /* 26.734px */
+    margin: 0 0 42px 0; 
+}
+.completed_projects__secondary_group {
+    display: grid;
+    grid-template-columns: 156px auto;
+    grid-template-rows: 107px 134px;
+    
 }
 .completed_projects__secondary_block {
+
 }
 .secondary_block__header {
-   grid-area: secondary_block__header; 
+    color: #E3B873;
+    font-family: Yeseva One;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 138.6%; /* 24.948px */
+    text-transform: uppercase;
 }
 .secondary_block__description {
-    grid-area: secondary_block__description;
+    color: #FFF;
+    font-family: Nunito Sans;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 163.68%; /* 21.278px */
 }
 .completed_projects__slider {
 }
 .completed_projects__nav {
+    margin: 107px 0 53px 0;
 }
 .completed_projects__nav__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 60px;
+    list-style: none;
+    cursor: pointer;
 }
 .completed_projects__nav__item {
 }
 .completed_projects__link {
+    color: rgba(255, 255, 255, 0.30);
+    font-family: Yeseva One;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 138.6%; /* 19.404px */
+    text-transform: uppercase;
+    text-decoration: none;
+    border: none;      
+}
+.completed_projects__link:hover {
+    color: #E3B873;
+    font-family: Yeseva One;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 138.6%; /* 19.404px */
+    text-transform: uppercase;
+    border-bottom: 1px solid #E3B873;
+    padding-bottom: 7px;
+   
 }
 .completed_projects__item {
 }
 .completed_projects__image_block {
+    display: flex;
+    flex-direction: column;    
+}
+.completed_projects__img {
+    display: flex;
+    max-width: 679px;
+    /*max-height: 482px;
+    overflow: hidden;*/
 }
 .online_control__section {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    background-color: #7a7a7a;
+    margin: 0 0 12px 134px;
 }
 .online_control__header {
+    color: #FFF;
+    text-align: center;
+    font-family: Yeseva One;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 138.6%; /* 27.72px */
+    text-transform: uppercase;   
 }
 .secondary_section_logo {
+    display: flex;
+    gap: 8px;    
 }
 .online_control__video {
+    
 }
 .online_control__video_wrapper {
+    margin: 0 0 31px 0;
 }
 .video__item {
 }
