--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+main {
+    background-image: url(images/hero_background.svg);
+    color: rgba(0, 0, 0, 0.70);
+    background-repeat: no-repeat;
+    background-position: top;
+}
 .header {
     display: flex;
     flex-wrap: nowrap;
@@ -65,7 +71,8 @@
     cursor: pointer;
 }
 .hero {
-    background-color: #7a7a7a;
+    /*background-image: url(images/hero_background.svg);
+    color: rgba(0, 0, 0, 0.70);*/
     /*display: flex;*/
     margin-left: 134px;
 }
@@ -246,17 +253,18 @@
     align-items: center;
     background-color: #7a7a7a;
     margin: 0 0 12px 0;
+    padding-bottom: 148px;
 }
 .online_control__header {
-    color: #FFF;
+   /* color: #FFF;
     text-align: center;
     font-family: Yeseva One, sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    line-height: 138.6%; /* 27.72px */
+    line-height: 138.6%;
     text-transform: uppercase;
-    margin: 0 0 13px 0;   
+    margin: 0 0 13px 0;*/  
 }
 .secondary_section_logo {
     display: flex;
@@ -313,6 +321,7 @@
     font-weight: 400;
     line-height: 163.68%; /* 21.278px */
 }
+
 .input_field {
     appearance: none;
     border: none;
@@ -320,13 +329,18 @@
     height: 17px;
     margin-bottom: 8px;
     background-color: transparent;
-    color: #363636;
+    /*color: #363636;*/
     font-family: Nunito Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 163.68%; /* 22.915px */
-
+}
+.black_font {
+    color: #363636;
+}
+.white_font {
+    color: #ffffff;
 }
 .submit_btn {
     width: 200px;
@@ -350,16 +364,24 @@
     box-shadow: 0px 5px 15px 0px rgba(227, 184, 115, 0.30);
     cursor: pointer;
 }
-.personal_data_processing_agreement {
+.online_control__personal_data_processing_agreement {
+    margin-top: 35px;
     display: flex;
     justify-content: center;
-    margin: 39px 0 148px 0;
 }
-.checkbox{
+.measurer__personal_data_processing_agreement {
+    display: flex;
+    margin: 8px 0 39px 0;
+}
+.personal_data_processing_agreement {
+    /*display: flex;
+    justify-content: center;*/
+}
+.checkbox {
     cursor: pointer;
 }
-.checkbox_label{
-    color: #181818;
+.checkbox_label {
+    /*color: #181818;*/
     font-family: Nunito Sans;
     font-size: 14px;
     font-style: normal;
@@ -373,7 +395,7 @@
     justify-content: center;
 }
 .types_of_repair__header {
-    color: #181818;
+    /*color: #181818;*/
     text-align: center;
     font-family: Yeseva One;
     font-size: 20px;
@@ -395,6 +417,7 @@
     grid-template-columns: repeat(3, 392px);
     gap: 30px;
     justify-content: center;
+    margin-bottom: 311px;
 }
 .types_of_repair__card {
     
@@ -457,50 +480,162 @@
     text-transform: uppercase;;
 }
 .measurer_request {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-image: url("images/measurer_request_advantages_background.svg");
+    background-repeat: no-repeat;
+    gap: 207px;
 }
 .measurer_request__advantages {
+    display: flex;
+    flex-direction: column;
+    max-width: 1006px;
 }
 .measurer_request__advantages__background {
 }
 .measurer_request__advantages__img {
 }
 .measurer_request__advantages__list {
+    display: flex;
+    flex-direction: column;
+    margin: 118px 0 55px 0;
+    gap: 50px;
+    
 }
 .measurer_request__advantages__item {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 .measurer_request__advantages__point {
+    display: flex;
+    position: relative;
+    height: fit-content;
 }
 .point__img {
 }
 .point__value {
+    position: absolute;
+    top: 28px;
+    left: 35px;
+    color: #FFF;
+    text-align: center;
+    font-family: Yeseva One;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 138.6%; /* 24.948px */
 }
 .measurer_request__advantages__text {
+    color: #363636;
+    font-family: Nunito Sans;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 .measurer_request__submit_section {
+    display: flex;
+    flex-direction: column;
+    margin: 118px 0 0 0;
+    background-color: #131313;
+    padding: 28px 49px 0 49px;
+    min-width: 506px;
+    
 }
 .measurer_request__submit_section__description {
+    color: #FFF;
+    text-align: center;
+    font-family: Nunito Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 143.22%; /* 25.78px */
+    padding: 8px 0 8px 0;
 }
-.measurer_request__submit_section__data_input {
+.measurer_request__submit_section__data_input_section {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
 }
-.call_the_measurer__btn {
+.call_the_measurer_btn__direction {
+    display: flex;
+    justify-content: end;
 }
 .discount {
+    display: flex;
+    align-items: center;
 }
 .discount__img {
 }
 .discount_description {
+    color: #E3B873;
+    text-shadow: 0px 3px 10px rgba(227, 184, 115, 0.15);
+    font-family: Nunito Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 143.22%; /* 25.78px */
 }
 .wildest_fantasies {
+    background-image: url(images/wildest_fantasies_background.svg);
+    background-repeat: no-repeat;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 243px;
+    margin-bottom: 70px;
 }
 .wildest_fantasies__text {
+    display: flex;
+    flex-direction: column;
+    max-width: 587px;
+    
 }
 .wildest_fantasies__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items:flex-start;
+    gap: 25px;
+    list-style: none;
+    cursor: pointer;
 }
 .wildest_fantasies__item {
 }
 .wildest_fantasies__link {
+    text-transform: uppercase;
+    text-decoration: none;
+    border: none;
+    color: #FFF;
+    font-family: Nunito Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 190.96%; /* 38.192px */
+}
+.wildest_fantasies__link:hover {
+    color: #E3B873;
+    border-bottom: 1px solid #E3B873;
+    /*padding-bottom: 7px;*/
+}
+.wildest_fantasies__photos__contsiner {
+    display: flex;
+    gap: 40px;
 }
 .wildest_fantasies__photos {
+    display:flex;
+    flex-direction: column;
+    height: 1022px;
+    gap: 40px;
+}
+.column_left {
+    justify-content: flex-end;
+}
+.column_right {
+    justify-content: flex-start;
 }
 .Fantasy_1 {
 }
@@ -511,34 +646,97 @@
 .Fantasy_4 {
 }
 .our_clients__section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-image: url(images/our_clients_background.svg);
 }
 .our_clients__header {
 }
 .our_clients__description {
+    display: flex;
+    justify-content: center;
+    color: #363636;
+    text-align: center;
+    font-family: Nunito Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 163.68%; /* 29.462px */
 }
 .our_clients__card_block {
+    display: grid;
+    grid-template-columns: repeat(3, 376px);
+    gap: 54px;
+    justify-content: center;
+    margin-bottom: 159px;
+    margin-top: 39px;
 }
 .our_clients__card {
+    background: #FFF;
+    box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.04);
+    padding: 25px 25px 0 25px;
+    position: relative;
+    height: 428px;
 }
 .client {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 .client_avatar {
 }
 .avatar_img {
 }
 .client_name {
+    color: #181818;
+    font-family: Yeseva One;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 127.05%; /* 22.869px */
 }
 .client_feedback {
+    color: #959595;
+    font-family: Nunito Sans;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 180%; /* 23.4px */
 }
 .client__repair_data {
+    display: flex;    
+    width: 294px;
+    height: 54px;
+    background-color: #E3B873;
+    justify-content: space-evenly;
+    position: absolute;
+    top: 94%;
+    left: 0%;    
 }
-.client__repair_data__small_block {
+.client__repair_data__small_block {    
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    /*padding: 10px 20px 10px 20px;*/
+    gap: 10px;
 }
 .client__repair_data_img {
 }
 .client__repair_data__small_block__text {
+    color: #FFF;
+    font-family: Yeseva One;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 138.6%; /* 23.562px */
+    text-transform: uppercase;
 }
 .questions_section {
+    display: flex;
+    flex-direction: column;
+
 }
 .questions_section__header {
 }
